welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:1: error: type mismatch;
 found   : Unit
 required: Boolean
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
                                                       ^